tests/baselines/reference/parserPropertySignature9(strict=true).errors.txt
parserPropertySignature9.ts(2,3): error TS7008: Member '0' implicitly has an 'any' type.


==== parserPropertySignature9.ts (1 errors) ====
    interface I {
      0;
      ~
!!! error TS7008: Member '0' implicitly has an 'any' type.
    }